[package]
name = "axdevice"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
log = "=0.4.19"
cfg-if = "1.0"
serde = { version = "1.0.204", default-features = false, features = ["derive"] }

emu_device = { git = "https://github.com/arceos-hypervisor/emu-devices.git" }
# System independent crates provided by ArceOS.
axerrno = "0.1.0"
